# fizzy

./: CLAUDE.md
fizzy-app/: .gitignore  README.md
fizzy-app/src-tauri/: Cargo.toml  tauri.conf.json
fizzy-app/src-tauri/capabilities/: default.json
fizzy-app/src-tauri/icons/: icon.icns
fizzy-app/src-tauri/src/: main.rs  rails_manager.rs
fizzy-app/ui/: index.html
fizzy-mcp/: README.md  package-lock.json  package.json
fizzy-mcp/src/: client.ts  index.ts
fizzy-mcp/src/tools/: boards.ts  cards.ts  columns.ts  comments.ts  identity.ts  notifications.ts  steps.ts  tags.ts  users.ts
